[package]
name = "registry"
version = "0.1.0"
authors = ["Nima Rasooli <nimarasooli1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
ic-types = "0.1.3"
serde = "1.0.116"
unic = "0.9"
validator = { version = "0.12", features = ["derive"] }