[package]
name = "router"
version = "0.1.0"
authors = ["Miguel Toscano <miguel@fleek.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
ic-types = "0.1.3"
serde = "1.0.116"
ic-kit = "0.4.2"
validator = { version = "0.12", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }