[package]
name = "big-map-node"
version = "0.1.0"
authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree = { path = "../tree" }
ic-types = "0.1.2"
ic-cdk = "0.2.3"
ic-cdk-macros = "0.2.3"
serde = "1.0.116"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
