[package]
name = "tree"
version = "0.1.0"
authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
ic-types = "0.1.2"
ic-cdk = "0.2.3"
ic-cdk-macros = "0.2.3"
serde = "1.0.116"
async-std = { version = "1.9.0", features = ["attributes"] }
