[package]
name = "address_book"
version = "0.1.0"
authors = ["Nima Rasooli <nima@fleek.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
unic = "0.9"
ic-cdk = "0.5"
ic-kit = "0.4.2"
serde = "1.0.116"
ic-types = "0.1.3"
crc32fast = "1.3.2"
ic-cdk-macros = "0.3"
serde_bytes = "0.11.5"
validator = { version = "0.12", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }