[package]
name = "address_book"
version = "0.1.0"
authors = ["Nima Rasooli <nima@fleek.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
unic = "0.9"
ic-cdk = "0.5"
ic-kit = "0.4.2"
serde = "1.0.116"
ic-types = "0.3.0"
candid = "0.7.14"
crc32fast = "1.3.2"
ic-cdk-macros = "0.5.1"
serde_bytes = "0.11.5"
validator = { version = "0.15", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }