[package]
name = "registry"
version = "0.2.0"
authors = ["Nima Rasooli <nima@fleek.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-types = "0.3.0"
candid = "0.7.14"
ic-kit = "0.4.2"
serde = "1.0.116"
serde_bytes = "0.11.5"
validator = { version = "0.15", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
