[package]
name = "nft"
version = "0.2.0"
authors = ["Nima Rasooli <nima@fleek.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7"
ic-cdk = "0.5"
ic-cdk-macros = "0.5.6"
ic-types = "0.4.1"
serde = "1.0.116"
serde_bytes = "0.11.5"
ic-kit = "0.4.8"
validator = { version = "0.12", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }